<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/image_videoThumb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="@dimen/notification_thumb_max_width"
        android:maxHeight="@dimen/notification_thumb_max_height"
        android:adjustViewBounds="true"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/videoThumbnail" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingLeft="7dp"
        android:paddingStart="7dp"
        android:paddingRight="0dp"
        android:paddingEnd="0dp"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_mediaTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textAppearance="@style/TextAppearance.Compat.Notification.Title.Media"
            android:textAlignment="viewStart"
            android:gravity="start">

            <requestFocus />
        </TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn_skipPrevious"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                app:srcCompat="@drawable/ic_skip_previous_white_24dp"
                android:contentDescription="@string/skipPrevious" />

            <ImageView
                android:id="@+id/btn_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                app:srcCompat="@drawable/ic_play_white_24dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/btn_skipNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                app:srcCompat="@drawable/ic_skip_next_white_24dp"
                android:contentDescription="@string/skipNext" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingRight="0dp"
        android:paddingEnd="0dp"
        android:paddingBottom="10dp"
        app:srcCompat="@drawable/ic_close_white_20dp"
        android:contentDescription="@string/close" />
</LinearLayout>

