<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="15dp"
    android:paddingBottom="6dp"
    android:orientation="vertical">

    <SeekBar
        android:id="@+id/sb_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/btn_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            app:srcCompat="@drawable/ic_play_white_32dp"
            app:tint="@color/color_selector_white_color_accent"
            android:contentDescription="@string/play" />

        <ImageView
            android:id="@+id/btn_skipNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            app:srcCompat="@drawable/ic_skip_next_white_36dp"
            app:tint="@color/color_selector_white_color_accent"
            android:contentDescription="@string/skipNext" />

        <TextView
            android:id="@+id/text_videoProgressDuration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:text="00:00/00:00"
            android:textColor="@android:color/white"
            android:textSize="@dimen/widget_small_text_size"
            android:textAlignment="viewStart"
            android:gravity="start"
            tools:ignore="HardcodedText" />

        <Spinner
            android:id="@+id/spinner_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:spinnerMode="dropdown"
            android:background="@null" />

        <TextView
            android:id="@+id/btn_chooseEpisode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginLeft="-5dp"
            android:layout_marginStart="-5dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/playlist"
            android:textColor="@color/color_selector_white_color_accent"
            android:textSize="@dimen/widget_large_text_size" />
    </LinearLayout>
</LinearLayout>